# ccn-memory-mcp-orchestration

./: AGENTS.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/development/: Versioned Graph Store Specification.md
orchestration/: README.md  flow_contracts.json  metrics_dashboard_spec.json  observability_plan.md  orchestration_spec.md  reliability_checklist.md  toil_register.md  wip_policy.md
orchestration/runbooks/: chaos_recipes.md  replay_backfill.md  rollback.md
src/: __init__.py
src/auth/: __init__.py
src/commit/: __init__.py
src/lineage/: __init__.py
src/protocol/: __init__.py
src/query/: __init__.py
src/storage/: __init__.py  types.py  wal.py
src/telemetry/: __init__.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/integration/storage/: test_wal_replay.py
tests/smoke/: __init__.py  test_project_structure.py
tests/unit/storage/: test_wal_writer.py
