[build-system]
requires = ["hatchling==1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ccn-memory-mcp-orchestration"
version = "0.1.0"
description = "CCN Memory MCP orchestration services and tooling"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [
  {name = "CCN Memory Team"}
]
keywords = ["mcp", "orchestration", "fastapi", "opentelemetry", "rbac"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "fastapi==0.110.2",
  "pydantic==2.7.4",
  "jsonschema==4.21.1",
  "python-jose[cryptography]==3.3.0",
  "httpx==0.27.0",
  "opentelemetry-api==1.24.0",
  "opentelemetry-sdk==1.24.0"
]

[project.optional-dependencies]
test = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7"
]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "ruff==0.5.0",
  "mypy==1.10.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
